-fixed index carousel on mobile -changed the image for women-suits carousel

--- a/css/style.scss
+++ b/css/style.scss
@@ -400,6 +400,7 @@
     margin-bottom: 1.375rem; // 22px
 
     .swiper {
+      height: 450px;
       .swiper-slide {
         padding-bottom: 5.1875rem; // 83px
 
@@ -437,7 +438,7 @@
 
       .swiper-pagination {
         flex-direction: row;
-        top: -43%;
+        top: -5%;
         margin-left: 0;
         justify-content: center;
         gap: 2.5rem;
